--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "blob-stream": "^0.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "mysql-wrap": "^0.5.3",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "pdfkit": "^0.11.0"
   }
 }
