--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "mysql-wrap": "^0.5.3",
+    "node-schedule": "^1.3.2",
+    "node-xlsx": "^0.15.0",
     "nodemon": "^1.19.2",
     "pdfkit": "^0.11.0"
   }
