--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-schedule": "^1.3.2",
     "node-xlsx": "^0.15.0",
     "nodemon": "^1.19.2",
-    "pdfkit": "^0.11.0"
+    "pdfkit": "^0.11.0",
+    "request": "^2.88.2"
   }
 }
